<resources>
    <string name="app_name">NightSpot</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="nav_item_home">Home</string>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="status_started">Started</string>
    <string name="status_stopped">Stopped</string>
    <string name="settings">Settings</string>
    <string name="button_start">Fingerprint</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_login">Login</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="loading_content">Getting tracks</string>
    <string name="tv_loading_content">Loading your music library</string>
    <string name="cd_google_signin_button">Login with Google</string>
    <string name="cd_spotify_signin_button">Login with Spotify</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_phone">Phone</string>
    <string name="pub_register_button">Register</string>
    <string name="add_pub_button">Add new Pub</string>
    <string name="print_tracks_button">Print tracks</string>
    <string name="button_send_pub_tracks">Send</string>
    <string name="button_skip_send_tracks">Skip</string>
    <string name="button_edit_pub">Edit</string>
    <string name="button_print_tracks">Print tracks</string>
    <string name="default_user">User</string>
    <string name="label_tracks">Tracks</string>
    <string name="label_playlists">Playlists</string>
    <string name="label_pub_name">Name</string>
    <string name="label_default_no_data">None</string>
    <string name="pub_name_default" translatable="false">Pub</string>
    <string name="button_go_gmaps">Go</string>
    <string name="button_more_info" translatable="false">Info</string>
    <string name="button_call_pub">Call</string>
    <string name="tv_default_affinity">None</string>
    <string name="common_spotify_signin_button_text_long">Sign in with Spotify</string>
    <string name="label_pub_description">Description</string>
    <string name="label_pub_address">Address</string>
    <string name="label_pub_phone">Phone</string>
    <string name="label_pub_tracks">Tracks</string>
    <string name="label_pub_affinity">Affinity</string>
    <string name="affinity_none">None</string>
    <string name="affinity_low">Low</string>
    <string name="affinity_middle">Middle</string>
    <string name="affinity_middlehigh">Mid-high</string>
    <string name="affinity_high">High</string>
    <string name="warning_must_have_gmaps">You need to install Google Maps</string>
    <string name="button_reload_library">Reload library</string>
    <string name="toast_affinity_recalculated">Affinity recalculated successfully</string>
    <string name="tv_loading_pub_tracks">Loading tracks</string>
    <string name="tv_switch_starting">Starting</string>
    <string name="tv_switch_stopping">Stopping</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Do you want to Logout?</string>
    <string name="logout_success">You have logout</string>
    <string name="tv_loading_user_playlists">Collecting user info</string>
</resources>
